--- a/src/poo/trabalho1/gui/layout.fxml
+++ b/src/poo/trabalho1/gui/layout.fxml
@@ -2,30 +2,26 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane prefHeight="402.0" prefWidth="600.0">
-         <children>
-            <Label layoutX="14.0" layoutY="14.0" prefHeight="80.0" prefWidth="341.0" text="Simulador de Carros">
-               <font>
-                  <Font size="37.0" />
-               </font>
-            </Label>
-            <Button layoutX="204.0" layoutY="200.0" mnemonicParsing="false" text="Iniciar">
-               <font>
-                  <Font size="38.0" />
-               </font>
-            </Button>
-            <Button layoutX="204.0" layoutY="296.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="151.0" text="Sair">
-               <font>
-                  <Font size="38.0" />
-               </font>
-            </Button>
-         </children>
-      </AnchorPane>
+      <Label layoutX="14.0" layoutY="14.0" prefHeight="74.0" prefWidth="541.0" text="Simulador de Veiculos">
+         <font>
+            <Font size="51.0" />
+         </font>
+      </Label>
+      <Button fx:id="bIniciar" layoutX="207.0" layoutY="163.0" mnemonicParsing="false" onAction="#Iniciar" prefHeight="74.0" prefWidth="140.0" text="Iniciar">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Button>
+      <Button fx:id="bSair" layoutX="207.0" layoutY="263.0" mnemonicParsing="false" onAction="#Sair" prefHeight="74.0" prefWidth="140.0" text="Sair">
+         <font>
+            <Font size="35.0" />
+         </font>
+      </Button>
    </children>
-</VBox>
+</Pane>
